# mwaka

./: .eslintrc  .gitignore  .prettierrc  .releaserc.yml  Cargo.toml  Makefile  README.md  deny.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: audit.yml  ci-main.yml  ci-pull-request.yml  ci.yml  release.yml  testing.yml
apps/demo/: package.json
apps/demo/src/: App.tsx
apps/docs/: index.html  package.json  vite.config.ts
apps/docs/src/: App.tsx
demo/: Cargo.toml  README.md
demo/src/: app.rs  main.rs
docs/: Cargo.toml  README.md
docs/src/: app.rs  main.rs
mwaka/: Cargo.toml
mwaka-aria/: Cargo.toml
mwaka-aria/src/: lib.rs
mwaka-aria/src/accordion/: root.rs
mwaka-aria/src/button/: create_button.rs  mod.rs  root.rs  use_button.rs
mwaka-aria/tests/: button.rs
mwaka/src/: lib.rs
playground/: Cargo.toml  README.md
playground/src/: app.rs  main.rs
scripts/: prepare.js
