[package]
name = "docs"
version = "0.0.2"
edition = "2021"

[package.metadata.leptos]
output-name = "docs"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.7.5", optional = true }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
cfg-if = "1.0.0"
leptos = { version = "0.6.11" }
leptos_axum = { version = "0.6.11", optional = true }
leptos_meta = { version = "0.6.11" }
leptos_router = { version = "0.6.11" }
log = "0.4.21"
simple_logger = "4.3.3"
tokio = { version = "1.37.0", optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.2", features = ["fs"], optional = true }
wasm-bindgen = "=0.2.92"
thiserror = "1.0.59"
http = "0.2.12"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
	"dep:axum",
	"dep:tokio",
	"dep:tower",
	"dep:tower-http",
	"dep:leptos_axum",
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
