[package]
name = "mwaka-aria"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A UI toolkit for building accessible web apps and design systems with Leptos."
repository = "https://github.com/timayz/mwaka"
documentation = "https://docs.rs/mwaka-aira"

[dependencies]
