[package]
name = "mwaka-aria"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A UI toolkit for building accessible web apps and design systems with Leptos."
repository = "https://github.com/timayz/mwaka"
documentation = "https://docs.rs/mwaka-aria"

[dependencies]
leptos = { version = "0.6.11" }

[dev-dependencies]
pretty_assertions = "1.4.0"
regex-lite = "0.1.5"
lazy_static = "1.4.0"
