[package]
name = "mwaka"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A UI toolkit for building accessible web apps and design systems with Leptos."
repository = "https://github.com/timayz/mwaka"
documentation = "https://docs.rs/mwaka"

[dependencies]
mwaka-aria = { path = "../mwaka-aria", version = "0.0.2" }
leptos = { version = "0.6.11" }